--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -225,24 +225,77 @@ ul li{
 
 .web-main-flexbox{
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     justify-content: center;
-    width: 80vw;
-    margin: auto;
+    flex-wrap: wrap;
+    width: 95vw;
+    margin: 5vmin auto;
 
     /* possible color option */
     /* background: black;
     color: white; */
 }
 
-.web-section-flex{
+.project-section-flex{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 5vmin;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    align-items: flex-start;
+    /* margin: 5vmin; */
+
+    width: 325px;
+    height: 350px;
+    border-radius: 10px;
+    border: 1px solid rgba(28,28,28,0.4);
+    box-shadow: 0px 3px 28px -3px rgba(28,28,28,1);
 }
 
-.web-screenshot{
+.project-section-flex:hover{
+    transform: scale(1.05);
+    transition: 0.2s ease-in-out;
+}
+
+.project-img{
+    width: 324px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    box-shadow: 0px 9px 21px -11px rgba(0,0,0,0.75);
+
+
+}
+
+.project-card-title{
+    color: hsla(26, 8%, 30%, 1);
+    font-size: 1.2rem;
+}
+
+.project-card-description-dev{
+    font-size: 1.0rem;
+    margin-top: 0;
+    color: rgb(52, 30, 180);
+}
+
+.project-card-description-design{
+    font-size: 1.0rem;
+    margin-top: 0;
+    color: rgb(7, 160, 139);
+}
+
+.card-text-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin: 15px;
+}
+
+.project-card-link{
+    text-decoration: none;
+    margin: 3vmin;
+    max-width: max-content;
+    max-height: max-content;
+}
+
+/* .web-screenshot{
     width: 50vw;
     border-radius: 10px;
     border: 1px solid rgba(28,28,28,0.4);
@@ -252,12 +305,12 @@ ul li{
 .web-screenshot:hover{
     transform: scale(1.05);
     transition: 0.2s ease-in-out;
-}
+} */
 
-.web-section-flex > article{
+/* .web-section-flex > article{
     max-width: 40ch;
     margin: 5vmin;
-}
+} */
 
 .web-section-flex > article > a{
     text-decoration: none;
