--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
 @import url(reset.css);
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;500;700&display=swap');
 
 
 /* font-family: 'Raleway', sans-serif;
@@ -337,43 +337,48 @@ header > a{
 
 /* individual project pages*/
 
+.hr-style{
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    width: 90vw;
+    text-align: center;
+    margin: 70px;
+}
+
 .project-ind-main{
     display: flex;
     flex-direction: column;
 }
 
 .project-header{
-    margin: 40px auto;
-    width: 70vw;
-    align-items: center;
-    justify-content: center;
-    
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr;
-}
-
-.project-header-info{
-    grid-column: 2/3;
-    grid-row: 2/3;
     display: flex;
     flex-direction: column;
-    max-width: 40ch;
-    margin-left: 20px;
+    width: 80vw;
+    align-items: center;
+    margin: auto;
+}
+
+.project-ind-description{
+    text-align: left;
+    max-width: 70ch;
+    margin: 30px;
 }
 
 .project-header-image{
-    grid-column: 1/2;
-    grid-row: 2/3;
-    width: 50vw;
+    width: 70vw;
     max-width: 600px;
-    margin: auto;
+    margin: 20px auto;
     border-radius: 10px;
-    align-self: center;
+    /* box-shadow: 4px 3px 11px -2px rgba(0,0,0,0.62); */
 }
 
 .project-ind-title{
+    align-self: center;
+    text-align: center;
     font-size: 2.2rem;
+    margin-top: 60px;
+
 }
 
 .project-ind-body{
@@ -382,16 +387,183 @@ header > a{
     align-items: center;
     width: 80vw;
     margin: auto;
+    margin-bottom: 10vmin;
+}
+
+.roots-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px;
+    width: 80vw;
+
 }
 
 .project-ind-body img{
     border-radius: 20px;
+    margin: 40px 20px;
+    width: 80vw;
+    /* border: 1px solid #c4c4c4; */
 }
 
 .project-ind-body p{
-    align-self: start;
+    text-align: left;
+    max-width: 70ch;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    
 }
 
+.project-ind-body h2{
+    font-weight: 500;
+    font-size: 1.5rem;
+    margin-top: 50px;
+    margin-bottom: 10px;
+}
+
+@media (min-width: 900px){
+    .project-header{
+        margin: 50px auto;
+        width: 85vw;
+        align-items: center;
+        justify-content: center;
+        
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        grid-template-rows: 1fr 2fr;
+    }
+    
+    .project-ind-title{
+        grid-column: 2/3;
+        grid-row: 1/2;
+        font-size: 2rem;
+        justify-self: center;
+        align-self: end;
+        padding: 10px;
+        margin-bottom: 0;
+        margin-top: 0;
+    }
+
+    .project-ind-description{
+        grid-column: 2/3;
+        grid-row: 2/3;
+        align-self: start;
+        justify-self: center;
+        display: flex;
+        flex-direction: column;
+        max-width: 40ch;
+        /* margin-left: 20px; */
+        padding-left: 10px;
+        margin: 0;
+
+    }
+    
+    .project-header-image{
+        grid-column: 1/2;
+        grid-row: 1/3;
+        width: 50vw;
+        max-width: 600px;
+    }
+}
+
+@media (min-width: 1000px){
+    .roots-content{
+        flex-direction: row;
+        width: 80vw;
+    }
+
+    .roots-content.roots-palette img{
+        min-width: 500px;
+        max-width: 900px;
+    }
+
+    .roots-content.roots-fonts img{
+        min-width: 500px;
+        max-width: 900px;
+    }
+    .roots-content p{
+        max-width: 30ch;
+        min-width: 20ch;
+        margin: 20px;
+    }
+
+    .roots-content.roots-fonts{
+        flex-direction: row-reverse;
+    }
+
+    .roots-content.roots-logo{
+        justify-items: center;
+        width: 80vw;
+    }
+
+    .roots-logo-images{
+        display: flex;
+        flex-direction: column;
+    }
+
+    #logo-sketch, #logo-final{
+        min-width: 300px;
+        max-width: 800px;
+    }
+
+    .roots-content.roots-letterhead{
+        flex-direction: row-reverse;
+    }
+
+    .roots-content.roots-letterhead img{
+        min-width: 500px;
+        max-width: 900px;
+    }
+
+    #roots-mockup-large{
+        min-width: 300px;
+        max-width: 700px;
+        border-radius: 20px;
+    }
+
+    .roots-content.roots-mockup{
+        justify-content: space-evenly;
+    }
+
+    #roots-brochure-title{
+        min-width: 250px;
+        max-width: 500px;
+    }
+
+    .roots-content.roots-brochure-title{
+        justify-content: space-evenly;
+    }
+
+    .roots-content.roots-brochure-spread{
+        flex-direction: row-reverse;
+        justify-content: space-evenly;
+    }
+
+    #roots-brochure-spread{
+        min-width: 300px;
+        max-width: 900px;
+    }
+
+}
+@media (min-width: 1200px){
+    .project-header{
+        max-width: 1000px;
+        /* grid-template-columns: 1fr 1fr; */
+        /* margin: auto; */
+    }
+    .project-header-image{
+        margin: 20px;
+        /* justify-self: center; */
+    }
+
+    .project-ind-description{
+        justify-self: start;
+    }
+
+    .project-ind-title{
+        justify-self: start;
+    }
+}
 
 /* roots project specific */
 
@@ -401,6 +573,11 @@ header > a{
 
 #roots-key-words{
     align-self: center;
+}
+
+#roots-tile-large{
+    max-width: 1000px;
+    margin: 40px;
 }
 
 /* art and photos page */
@@ -974,9 +1151,9 @@ footer > p > a:hover{
 @media (max-width: 630px){
         /* project pages */
 
-        /* .project-header-info{
+         /* .project-header-info{
             grid-template-columns: 1fr;
-        } */
+        }  */
         
     
     /* typography */
@@ -1045,7 +1222,7 @@ footer > p > a:hover{
     }
 
     /* design page */
-    .logo-section{
+    /* .logo-section{
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 2fr 3fr;
 
@@ -1066,7 +1243,7 @@ footer > p > a:hover{
         grid-area: 1/2/2/3;
         width: 30vw;
 
-    }
+    } */
 
     /* contact */
 
@@ -1078,3 +1255,4 @@ footer > p > a:hover{
         height: 10vh;
     }
 }
+
