--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -464,11 +464,13 @@ header > a {
   /* width: auto; */
   margin: 3vmin;
   border-radius: 10px;
-  /* border: 1px solid rgba(28,28,28,0.4); */
+  box-shadow: 0px 3px 28px -6px rgba(28, 28, 28, 00.8);
 }
 
 .art-photos-section > a > img:hover {
-  box-shadow: 0px 3px 28px -3px rgba(28, 28, 28, 1);
+  /* box-shadow: 0px 3px 28px -3px rgba(28, 28, 28, 1); */
+  transform: scale(1.05);
+
   transition: 0.2s ease-in-out;
 }
 
