--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -392,6 +392,22 @@ header > a {
   margin-bottom: 10px;
 }
 
+/* originally "science-content" class from science project css, but many pages were using it, so best to generalize here */
+.project-ind-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 30px;
+  width: 80vw;
+  max-width: 1200px;
+}
+
+/* originally "science-paragraphs" class from science project css, but many pages were using it, so best to generalize here */
+.project-ind-paragraphs p {
+  max-width: 70ch;
+  margin: 20px;
+}
+
 @media (min-width: 900px) {
   .project-header {
     margin: 50px auto;
@@ -878,6 +894,15 @@ footer > p > a:hover {
 
   footer {
     height: 10vh;
+  }
+}
+
+@media (min-width: 700px) {
+  .project-ind-content {
+    flex-direction: row;
+    width: 80vw;
+    margin: 50px;
+    justify-content: space-evenly;
   }
 }
 
