new page for weather app

--- a/assets/css/animations.css
+++ b/assets/css/animations.css
@@ -71,3 +71,6 @@
 .project-card-link.fade-in-1:nth-child(11) {
   animation-delay: 1.2s;
 }
+.project-card-link.fade-in-1:nth-child(12) {
+  animation-delay: 1.2s;
+}
