--- a/assets/css/animations.css
+++ b/assets/css/animations.css
@@ -77,3 +77,6 @@
 .project-card-link.fade-in-1:nth-child(13) {
   animation-delay: 1.4s;
 }
+.project-card-link.fade-in-1:nth-child(14) {
+  animation-delay: 1.5s;
+}
